@@ -66,11 +66,11 @@
   <!-- parts for displaying resources -->
 
   <zope:adapter
-        name="lobo_rg3"
+        name="lobo_ig3"
         for="loops.interfaces.IConcept
              loops.browser.skin.Lobo"
         provides="zope.interface.Interface"
-        factory="loops.browser.lobo.standard.ResourceGrid3"
+        factory="loops.browser.lobo.standard.ImageGrid3"
         permission="zope.View" />
 
 </configure>
